# context-guard

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude-plugin/scripts/: trimmer_hook.py
commands/: contextguard.md
hooks/: hooks.json
scripts/: token_count.py  trim_lib.py  trimmer_hook.py
skills/guard/: SKILL.md
tests/: conftest.py  llm_client.py  test_extract_json.py  test_llm_adversarial.py  test_llm_context.py  test_semantic_modes.py  test_trim.py
tests/fixtures/: api_logs.json  iris.json  products.json
